<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_page_spacing">

    <ImageView
        android:id="@+id/addNoteBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_2dp"
        android:padding="@dimen/default_padding_8dp"
        app:srcCompat="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/addNoteTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_add_note"
        android:theme="@style/DefaultPageTitle"
        android:layout_marginStart="@dimen/default_margin_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/addNoteBackImageView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteTitleInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_32dp"
            android:hint="@string/hint_title"
            android:paddingTop="@dimen/default_padding_4dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/InputErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNoteTitleTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:importantForAutofill="no"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/noteDescriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/hint_description"
            android:paddingTop="@dimen/default_padding_4dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:errorTextAppearance="@style/InputErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/noteTitleInputLayout"
            app:layout_constraintBottom_toTopOf="@+id/noteSaveButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/noteDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:importantForAutofill="no"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/PrimaryButton"
            android:id="@+id/noteSaveButton"
            android:enabled="true"
            android:text="@string/button_save"
            android:layout_marginTop="@dimen/default_margin_32dp"
            app:backgroundTint="@color/selector_primary_button_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>