<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/default_page_spacing">

    <ImageView
        android:id="@+id/noteDetailsBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_2dp"
        android:padding="@dimen/default_padding_8dp"
        app:srcCompat="@drawable/ic_arrow_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/noteDetailsDeleteImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_2dp"
        android:padding="@dimen/default_padding_8dp"
        app:srcCompat="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/noteDetailsLastUpdateLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_32dp"
        android:text="@string/text_last_update"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteDetailsBackImageView" />

    <TextView
        android:id="@+id/noteLastUpdateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_4dp"
        android:layout_marginTop="@dimen/default_margin_32dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/noteDetailsLastUpdateLabelTextView"
        app:layout_constraintTop_toBottomOf="@+id/noteDetailsBackImageView"
        tools:text="January 1, 2022 12:00 AM" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteDetailsTitleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_8dp"
        android:hint="@string/hint_title"
        android:paddingTop="@dimen/default_padding_4dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/InputErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteLastUpdateTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetailsTitleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:importantForAutofill="no"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteDetailsDescriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/hint_description"
        android:paddingTop="@dimen/default_padding_4dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:errorTextAppearance="@style/InputErrorTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noteDetailsTitleInputLayout"
        app:layout_constraintBottom_toTopOf="@+id/noteDetailsSaveButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/noteDetailsDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        style="@style/PrimaryButton"
        android:id="@+id/noteDetailsSaveButton"
        android:enabled="true"
        android:text="@string/button_save"
        android:layout_marginTop="@dimen/default_margin_32dp"
        app:backgroundTint="@color/selector_primary_button_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>